Fix extra space below nav and above footer.

--- a/_includes/css/all.css
+++ b/_includes/css/all.css
@@ -93,9 +93,6 @@ dt {
     
     padding: 2%;
     margin: auto;
-    margin-top: 3%;
-    margin-bottom: 1%;
-    
     opacity: 0.8;
 }
 
